updated project with allure reports and more recent lib versions